fix a few scantron bugs add todos

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="stylesheet" type="text/css" href="reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:700|Montserrat|Roboto:300,400,500" rel="stylesheet">
   <title>SATwiz</title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body id="root">
 </body>
 
 </html>
